# Assignment3

./: nuxt.config.ts  package.json  s.js
.vercel/output/: config.json  nitro.json
.vercel/output/functions/__fallback.func/: package.json
.vercel/output/functions/__fallback.func/chunks/nitro/: nitro.mjs  nitro.mjs.map
.vercel/output/functions/__fallback.func/chunks/routes/: renderer.mjs
.vercel/output/functions/__fallback.func/chunks/routes/api/: chat.post.mjs  chat.post.mjs.map  upload.post.mjs  upload.post.mjs.map
.vercel/output/static/_nuxt/: 5hjyY4Hv.js  CgKvyuI0.js  DUegDlsC.js  entry.BtcqpMoj.css
.vercel/output/static/_nuxt/builds/: latest.json
.vercel/output/static/_nuxt/builds/meta/: 291ebd1b-28cb-44d1-a0cf-06b472f430aa.json
app/: app.vue
rag/: api.py  main.py  pyproject.toml  rag.js  requirements.txt
rag/chroma_db/2bc20d91-211e-4d6c-864f-5eb6b4a97f31/: index_metadata.pickle
server/api/: chat.post.ts  upload.post.ts
