[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chroma>=0.2.0",
    "fastapi>=0.136.1",
    "langchain>=1.2.18",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "sentence-transformers>=5.4.1",
    "tqdm>=4.67.3",
    "uvicorn>=0.46.0",
]
